@@ -160,6 +160,10 @@ div.clear {
 clear:both;
 }
 
+form.profile-quickform {
+display: inline;
+}
+
 /*
 CONFIGS
 */
@@ -217,15 +221,10 @@ td.profile-profile-picture, td.profile-profile-friend, td.profile-profile-tribe 
 }
 
 div#profile-profile-avatar {
-
-margin:1px;
-width:45%;
-float:right;
+margin-top:5px;
+margin-bottom:5px;
+width:100%;
 text-align:center;
-}
-
-div#profile-profile-avatar img{
-border:2px solid black;
 }
 
 div#profile-profile-mainvideo{
