@@ -1,10 +1,10 @@
 <{include file="db:profile_header.html"}>
 <{if $profile_friendshipform}>
 <{if $hideForm}>
-<div id="profile-friendship-form" class="outer">
-  <h3 class="head">
+<div id="profile-form" class="outer">
+  <h2 class="head">
     <a href="#" onclick ="jQuery().find('div.profile-friendship-form').toggle(400);"><img src="images/toggle.gif" />&nbsp;</a>
-  </h3>
+  </h2>
   <div class="profile-friendship-form" style="display: none">
     <{includeq file='db:system_common_form.html' form=$profile_friendshipform}>
   </div>
@@ -19,8 +19,18 @@
   <h3 class="profile-profile-title head"><{if $isOwner}><a href="configs.php?uid=<{$uid_owner}>"><img class="profile-nav-bar-icon" src="images/configs.gif"  /></a>&nbsp;<{/if}><{$user_uname}></h3>
   <{if $allow_pictures}>
   <div id="profile-profile-avatar">
-    <{if $avatar_url!="" && $avatar_url!="blank.gif" }>
-    <img src="<{$icms_url}>/uploads/<{$avatar_url}>" />
+    <{if $user_avatar}>
+    <img src="<{$user_avatar}>" />
+    <{if $isOwner && !$gravatar}>
+    <br />
+    <form action="<{$icms_url}>/modules/profile/pictures.php" method="post" id="avatarform" class="profile-quickform">
+      <input type="hidden" value="delavatar" name="op" />
+      <{$token}>
+      <input name="submit" type="image" alt="<{$lang_delete}>" title="<{$lang_delete}>" src="<{$icms_url}>/images/crystal/actions/editdelete.png" style="vertical-align:middle" />
+    </form>
+    <{elseif $gravatar}>
+    <p><{$lang_selectavatar}></p>
+    <{/if}>
     <{else}>
     <img src="images/noavatar.gif" />
     <{if $isOwner}>
@@ -31,7 +41,6 @@
     <{/if}>
   </div>
   <{/if}>
-  <div style="clear:both"></div>
 </div>
 <{/if}>
 <{if $isOwner}>
